--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "actor-zillow-api",
     "version": "0.0.1",
     "dependencies": {
-        "apify": "0.22.4"
+        "apify": "0.22.4",
+        "puppeteer": "^8.0.0"
     },
     "scripts": {
         "start": "node main.js"
