--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-    "name": "actor-zillow-api",
+    "name": "dva-actor-zillow-api",
     "version": "0.0.1",
     "dependencies": {
-        "apify": "0.22.4",
-        "puppeteer": "^8.0.0"
+        "apify": "0.22.4"
     },
     "scripts": {
         "start": "node main.js"
     },
-    "author": "Petr Čermák"
+    "author": "Alex Mabry"
 }
