--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "dependencies": {
         "apify": "^1.0.2",
+        "csv": "^5.3.2",
         "node-fetch": "^2.6.1",
         "puppeteer": "6.0.0"
     },
