--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
         "aws-sdk": "^2.863.0",
         "csv": "^5.3.2",
         "node-fetch": "^2.6.1",
+        "p-limit": "^3.1.0",
         "puppeteer": "6.0.0"
     },
     "scripts": {
         "start": "node main.js"
     },
-        "author": "Alex Mabry"
+    "author": "Alex Mabry"
 }
